# modelmux

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  deny.toml  rust_coding_conventions.md  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  RESEARCH_STRATEGY.md  TESTING.md
packaging/: release-linux.sh  release.sh
packaging/debian/: modelmux.service
packaging/homebrew/: README.md  modelmux.rb
packaging/systemd/: README.md  config.toml.example  install.sh  modelmux-user.service  modelmux.service
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  provider.rs  server.rs
src/config/: cli.rs  loader.rs  migration.rs  mod.rs  paths.rs  validation.rs
src/converter/: anthropic_to_openai.rs  mod.rs  openai_to_anthropic.rs
tests/: cli_tests.rs  config_tests.rs  integration_tests.rs  url_tests.rs  validation_tests.rs
tools/: solid_principles_guide.md  solid_principles_quick_reference.md  task_template.md
