[package]
name = "modelmux"
version = "0.6.0"
edition = "2024"
authors = ["Jaro <yarenty@gmail.com>"]
description = "ModelMux - high-performance Rust gateway that translates OpenAI-compatible API requests to Vertex AI (Claude), with streaming, tool calling, and production-grade reliability."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yarenty/modelmux"
homepage = "https://github.com/yarenty/modelmux"
documentation = "https://docs.rs/modelmux"
keywords = ["openai", "vertex-ai", "anthropic", "proxy", "ai"]
categories = ["web-programming", "api-bindings", "network-programming"]
exclude = [
    ".idea/*",
    "target/*",
    "*.log",
    ".env*",
    "!.env.example",
    "!LICENSE-MIT",
    "!LICENSE-APACHE"
]

[[bin]]
name = "modelmux"
path = "src/main.rs"

[lib]
name = "modelmux"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# HTTP server framework
axum = { version = "0.8", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# Google Auth
yup-oauth2 = { version = "12.1", features = ["hyper-rustls"] }
async-trait = "0.1"
hyper-util = "0.1"

# Configuration
directories = "5.0"
toml = "0.8"
shellexpand = "3.1"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Base64 encoding
base64 = "0.22"

# Time utilities
chrono = "0.4"

# Async streams
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.11"

[dev-dependencies]
tokio-test = "0.4"
base64 = "0.22"
reqwest = { version = "0.13", features = ["json"] }
temp-env = "0.3"
tempfile = "3.8"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
